# Kisan-Sat

./: .gitignore  README.md
backend/: .env.example  __init__.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  advisory_agent.py  graph.py  market_agent.py  pest_disease_agent.py  soil_crop_agent.py  supervisor.py  weather_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py  advisory.py  agent_state.py  common.py  final_report.py  market.py  pest_disease.py  soil_crop.py  weather.py
backend/app/services/: __init__.py
backend/ml/: __init__.py  base.py  efficientnet.py  lstm_yield.py  prithvi.py  xgboost_pest.py
docs/: KisanSat_Agents.pptx
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/dashboard/: agent-status-panel.tsx  dashboard-view.tsx  input-form.tsx  map-picker.tsx  result-cards.tsx
frontend/src/components/effects/: animated-counter.tsx  aurora-background.tsx  earth-globe.tsx  particle-beam.tsx  shimmer-button.tsx  text-generate.tsx  typewriter.tsx
frontend/src/components/layout/: footer.tsx  navbar.tsx
frontend/src/components/providers/: language-provider.tsx  lenis-provider.tsx
frontend/src/components/sections/: agent-pipeline.tsx  cta-section.tsx  dashboard-preview.tsx  hero.tsx  how-it-works.tsx  (+3 more)
frontend/src/lib/: pakistan-locations.ts  translations.ts
frontend/src/types/: api.ts
(+13 files in other folders)
