[project]
name = "kisansat-backend"
version = "0.1.0"
description = "KisanSat - Multi-agent crop advisory system for Pakistani farmers"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # LangGraph / LLM
    "langgraph>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",

    # ML - PyTorch
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.47.0",

    # ML - Scikit / XGBoost
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "rasterio>=1.4.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
